[AM-37] - Set-up reperio-api as a Spring Resource Server, requiring authorisation to request methods
-- Implemented a custom converter for the keycloak JWT token, which adds roles from a custom service:

https://www.baeldung.com/spring-security-map-authorities-jwt

Next:

Implement into reperio-api